# jq-rustv

./: .env.example  .gitignore  Cargo.toml  README.md  goals.md  task.md
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/src/: app.rs  config.rs  main.rs
apps/api/src/extractors/: authenticated_session.rs  authenticated_toko.rs  authenticated_user.rs  mod.rs
apps/api/src/http/: mod.rs
apps/api/src/http/bridge/: mod.rs
apps/api/src/http/dashboard/: auth.rs
apps/api/src/http/webhook/: disbursement.rs  mod.rs  qris.rs
apps/api/src/middleware/: api_rate_limit.rs  csrf.rs  mod.rs  session_auth.rs  toko_auth.rs  webhook_rate_limit.rs
apps/web/: package-lock.json  package.json  vite.config.ts
apps/web/src/components/: AppSidebar.vue  ChartAreaInteractive.vue  DataTable.vue  NavUser.vue
apps/web/src/components/new-york-v4/blocks/login-01/components/: LoginForm.vue
apps/web/src/layouts/: DashboardLayout.vue
apps/web/src/lib/: axios.ts
apps/web/src/pages/auth/: LoginPage.vue
apps/web/src/pages/dashboard/: DashboardPage.vue
apps/web/src/router/: index.ts
apps/web/src/stores/: auth.ts
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
apps/worker/src/jobs/: mod.rs  process_disbursement.rs  process_qris.rs  send_toko_callback.rs  test_support.rs
crates/auth/: Cargo.toml
crates/auth/src/: captcha.rs  csrf.rs  jwt.rs  lib.rs  password.rs  session.rs  toko_token.rs
crates/callback_client/: Cargo.toml
crates/callback_client/src/: lib.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/database/: Cargo.toml
crates/domain/: Cargo.toml
crates/domain/src/: enums.rs
crates/domain/src/models/: balance.rs  bank.rs  income.rs  mod.rs  player.rs  toko.rs  transaction.rs  user.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/nexusggr_client/: Cargo.toml
crates/nexusggr_client/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/qris_client/: Cargo.toml
crates/qris_client/src/: lib.rs
crates/redis_store/: Cargo.toml
crates/redis_store/src/: captcha.rs  idempotency.rs  lib.rs  queue.rs  rate_limit.rs  session.rs
docs/: architecture.md  contracts.md  phase-0-checklist.md  phase-1-auth-plan.md
migrations/: 20240101000000_init_schema.down.sql  20240101000000_init_schema.up.sql  20260407170500_seed_bootstrap_dev_user.down.sql  20260407170500_seed_bootstrap_dev_user.up.sql  20260407172000_seed_income_singleton.down.sql  20260407172000_seed_income_singleton.up.sql
scripts/: verify-all.sh
