[package]
name = "justqiu-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
justqiu-domain = { path = "../domain" }
justqiu-redis = { path = "../redis_store" }
justqiu-errors = { path = "../errors" }

anyhow.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
bcrypt.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sqlx.workspace = true
tracing.workspace = true
redis.workspace = true
